--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link nav-link-icon"
-                  href="/"
+                  href="#"
                   target="_blank"
                   data-toggle="tooltip"
                   title="叮当VIP"
@@ -64,7 +64,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link nav-link-icon"
-                  href="https://youtube.com/channel/UCCY24D6Az4xT2XUHpqjHMpg"
+                  href="#"
                   target="_blank"
                   data-toggle="tooltip"
                   title="Follow us on Youtube"
@@ -88,7 +88,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link nav-link-icon"
-                  href="https://github.com/qikaile"
+                  href="#"
                   target="_blank"
                   data-toggle="tooltip"
                   title="Star us on Github"
@@ -144,7 +144,7 @@
                   <div class="card-profile-image">
                     <a href="#">
                       <img
-                        src="https://npm.elemecdn.com/boke-cdn/img/logo.jpg"
+                        src="https://custom-images.strikinglycdn.com/res/hrscywv4p/image/upload/c_limit,fl_lossy,h_9000,w_1200,f_auto,q_auto/16721611/595838_111463.png"
                         class="rounded-bottom"
                       />
                     </a>
@@ -310,7 +310,7 @@
         <div class="row align-items-center justify-content-md-between">
           <div class="col-md-6">
             <div class="copyright">
-              &copy; 2020-2023
+              &copy; 2020-2024
               <a href="#" target="_blank"
                 >叮当VIP视频解析</a
               >.
@@ -323,7 +323,7 @@
                   href="https://kaigithub3131.github.io/xddStudy/"
                   class="nav-link"
                   target="_blank"
-                  >叮当社区</a
+                  >叮当学习网</a
                 >
               </li>
             </ul>
