--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                       <div class="col-sm-10">
                              <select class="form-control input-lg" id="jk">
                             <option value="https://yun.nxflv.com/?url=" selected="">（通用vip接口①（支持全网大部分原画，超级稳定）</option>
+                             <option value="https://www.ckplayer.vip/jiexi/?url=" selected="">CK接口</option>   
                             <option value="https://okjx.cc/?url=">（通用vip接口②（OK)</option>
                             <option value="https://jx.xmflv.com/?url=">（通用vip接口③）</option>
                             <option value="https://vip.bljiex.com/?v=">（通用vip接口④）</option>
@@ -270,7 +271,7 @@
           <div class="col-lg-6 text-lg-center btn-wrapper">
             <a
               target="_blank"
-              href="https://user.qzone.qq.com/2649019047"
+              href="#"
               class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg"
               data-toggle="tooltip"
               data-original-title="Follow us"
@@ -279,7 +280,7 @@
             </a>
             <a
               target="_blank"
-              href="https://youtube.com/channel/UCCY24D6Az4xT2XUHpqjHMpg"
+              href="#"
               class="btn btn-neutral btn-icon-only btn-facebook btn-round btn-lg"
               data-toggle="tooltip"
               data-original-title="Like us"
@@ -288,7 +289,7 @@
             </a>
             <a
               target="_blank"
-              href="https://space.bilibili.com/312300240"
+              href="#"
               class="btn btn-neutral btn-icon-only btn-dribbble btn-lg btn-round"
               data-toggle="tooltip"
               data-original-title="Follow us"
@@ -297,7 +298,7 @@
             </a>
             <a
               target="_blank"
-              href="https://github.com/Qikaile"
+              href="#"
               class="btn btn-neutral btn-icon-only btn-github btn-round btn-lg"
               data-toggle="tooltip"
               data-original-title="Star on Github"
